drafting rounds displaying correctly and are responsive (they collapse when clicked). I am able to choose and confirm picks, team and user objects update. Issue i am running into is in rounds 2/4, the drop down selector is not working properly. selecting one team effects another users selection. this is the next bug to fix

--- a/front-end/src/layout/Layout.css
+++ b/front-end/src/layout/Layout.css
@@ -195,3 +195,7 @@ tr:nth-child(odd){
 .draftTeamButtonContainer{
   width: 100%;
 }
+
+.wideCard{
+  width: 100%;
+}
